se agrega perfil para alumnos
Se agrego una lista la cual puede ser usada para implementar las clases del alunmo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DaryCam</string>
+    <string name="app_name">DayriCam</string>
     <string name="user">username</string>
     <string name="Alumno">Alumno</string>
     <string name="Maestro">Maestro</string>
